# snack-tracker

./: README.md  db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20210827_0417.py
templates/: base.html  snack_detail.html  snack_list.html
